--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
   </section>
   <section class="container-CEP">
-    <H1>QUAL É A RUA DESTE CEP ?</H1>
+    <h1 class="title">QUAL É A RUA DESTE CEP ?</h1>
     <form class="buscaCep">
       <input type="text" name="cep" id="cep" placeholder="Digite o seu CEP">
     </form>
